--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ scipy==1.10.1
 numpy==1.24.3
 Sastrawi==1.0.1
 lightgbm==4.5.0
-sentence_transformers
+sentence-transformers==2.2.2
+torch==2.0.1
+transformers==4.30.2
+nltk==3.8.1
