--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,6 @@ joblib==1.3.2
 scipy==1.10.1
 numpy==1.24.3
 Sastrawi==1.0.1
-lightgbm==4.5.0
-sentence-transformers==2.2.2
-torch==2.0.1
-transformers==4.30.2
+catboost==1.2.7
+sentence_transformers
 nltk==3.8.1
