--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ Sastrawi==1.0.1
 catboost==1.2.7
 sentence_transformers
 nltk==3.8.1
-torch==2.0.1+cpu
-torchvision==0.15.2+cpu
-torchaudio==2.0.2+cpu
+torch==2.0.1+cu118
+torchvision==0.15.2+cu118
+torchaudio==2.0.2+cu118
+
 transformers==4.33.2
