--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,5 @@ Sastrawi==1.0.1
 catboost==1.2.7
 sentence_transformers
 nltk==3.8.1
-torch==2.5.1+cu121
-torchvision==0.16.2+cu121
-torchaudio==2.5.2+cu121
+torch==
 transformers==4.33.2
